# eval-transcript

./: .env.example  .gitignore  .worktreeinclude  README.md  pyproject.toml
.config/: wt.toml
.gemini/: review-rules.md
.github/workflows/: ai-code-review.yml  bench-remote.yml  judge.yml
data/: manifest.md
servers/: README.md  cohere_server.py  kyutai_server.py  pyproject.toml
src/eval_transcript/: __init__.py  albert.py  data_migrate.py  elevenlabs.py  huggingface.py  judge.py  judge_cli.py  manifest.py  omlx.py  openrouter.py  panel.py  results.py  scaleway.py  scoring.py  scoring_cli.py  transcriptions.py
tests/: test_cli.py  test_data_migrate.py  test_elevenlabs.py  test_huggingface.py  test_judge.py  test_manifest.py  test_openrouter.py  test_panel.py  test_results.py  test_scaleway.py  test_scoring.py
