[project]
name = "eval-transcript"
version = "0.1.0"
description = "Benchmarking service for French administration audio transcription models."
readme = "README.md"
authors = [
    { name = "Luis Arias", email = "luis@refugies.info" }
]
requires-python = ">=3.12"
dependencies = [
    "elevenlabs>=2.50.0",
    "httpx>=0.28.1",
    "huggingface-hub>=1.16.1",
    "jiwer>=4.0.0",
    "python-dotenv>=1.2.2",
    "text2num>=2.4.0",
]

[project.scripts]
eval-transcript = "eval_transcript:main"

[build-system]
requires = ["uv_build>=0.11.14,<0.12.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "pre-commit>=4.6.0",
]
